# Highway-Tutor

./: CMakeLists.txt  README.txt
Data/: Highway1.txt  Highway2.txt  Highway_invalid_close_SV.txt  Highway_invalid_duplicates.txt  Highway_invalid_no_before.txt  Highway_valid_sorted.txt  Highway_valid_unsorted.txt  Passages.txt  Runs.txt
include/: Highway.h  Junction.h  Passage.h  Simulator.h  Tutor.h  Vehicle.h
src/: GenerateSimulation.cpp  Highway.cpp  Simulator.cpp  StartTutor.cpp  Tutor.cpp  Vehicle.cpp
